# task-tracking-bot

./: .gitignore  README.md  bot.py  core.py  gui.py  install.py  install.sh  pyproject.toml  task_logs.json
taskbot/: __init__.py  cli.py  core.py  gui.py
